force-app/main/default/objects/dsalesCiudad__c/dsalesCiudad__c.object-meta.xml
<CustomObject>
    <label>Ciudad</label>
    <nameField>
        <label>Nombre de Ciudad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ciudades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>