force-app/main/default/objects/dsalesCiudad__c/fields/dsalesNumero__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumero__c</fullName>
    <description>Campo automático de Salesforce para los registros de las ciudades</description>
    <displayFormat>{000000}</displayFormat>
    <label>Número</label>
    <type>AutoNumber</type>
</CustomField>