force-app/main/default/objects/dsalesCiudad__c/fields/dsalesRegion__c.field-meta.xml
<CustomField>
    <fullName>dsalesRegion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Región</label>
    <referenceTo>dsalesRegion__c</referenceTo>
    <relationshipLabel>Ciudades</relationshipLabel>
    <relationshipName>Ciudades</relationshipName>
    <type>Lookup</type>
</CustomField>