force-app/main/default/objects/dsalesCiudad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>dsalesActivo__c</columns>
    <columns>dsalesRegion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>